syntax = "proto3";

option java_package = "org.pipelineframework.csv.grpc";

message PaymentRecord {
  string id = 1;                        // UUID of PaymentRecord (inherited from BaseEntity)
  string csvId = 2;                     // Field "ID" of the CSV
  string recipient = 3;                 // Field "Recipient"
  string amount = 4;                    // BigDecimal represented as string for accuracy
  string currency = 5;                  // ISO 4217 code (ie. "GBP", "USD")
  string csvPaymentsInputFilePath = 6;  // Path to the input CSV file
}

message CsvPaymentsInputFile {
  string id = 1;
  string filepath = 2;                // Path to the CSV file
  string csvFolderPath = 3;
}

message CsvPaymentsInputStream {
  string source = 1;
}

service ProcessCsvPaymentsInputFileService {
  rpc remoteProcess(CsvPaymentsInputFile) returns (stream PaymentRecord);
}

service ProcessCsvPaymentsInputStreamService {
  rpc remoteProcess(CsvPaymentsInputStream) returns (stream PaymentRecord);
}

message CsvFolder {
  string path = 1;
}

service ProcessFolderService {
  rpc remoteProcess(CsvFolder) returns (stream CsvPaymentsInputFile);
}
